site/web/app/themes/brandonrp/assets/styles/modules/_nav.scss
.main-nav {
  font-family: $font-family-nav;
  font-size: ms(0.75);
  line-height: ms(2);
  letter-spacing: rem(1);
  pointer-events: auto;
  z-index: 10;

  padding: rem(10) 0;

  a {
    color: $nav-link-color;
    position: relative;
    padding: 0 10px;
    white-space: nowrap;
    line-height: 1;

    &:hover {
      color: $nav-link-hover-color;
    }

    &:before, &:after {
      @include transition(opacity $transition-speed ease-in-out);
      @include opacity(0);

      color: $brand-red;
      display: inline-block;
      position: absolute;
    }
  }

  ul {
    @extend .clean-list !optional;
  }

  > ul {
    padding: 0;
  }

  li.active > a,
  a:hover {

    &:before, &:after {
      @include opacity(1.0);
      line-height: 1;
      top: 0;
    }

    &:before {
      content: '[';
      left: 0;
    }
    &:after {
      content: ']';
      right: 0;
    }
  }

  .nav-toggle {
    display: block;

    &:hover {
      color: $brand-red;
    }
  }

  #menu-main-menu {
    display: none;
  }

  //@media(max-width: $screen-xl) {
  //
  //  font-size: ms(1);
  //  line-height: ms(2);
  //
  //  .nav-toggle {
  //    display: block;
  //  }
  //
  //  #menu-main-menu {
  //    display: none;
  //  }
  //}
}

.nav-toggle {
  @include transition(color $transition-speed ease-in-out,
    opacity $transition-speed ease-in-out);
  @extend .icon-three-bars;
  display: inline-block;
  font-size: ms(2);
  line-height: 1;
  margin: ms(-1) auto 0;
  cursor: pointer;

  //@media (min-width: $screen-md) {
  //  display: none !important;
  //}
}

.dropdown {
  position: relative;

  &:hover {
    .sub-menu {
      z-index: 2;

      width: span(2, 12);
      padding: rem(175) ms(2) 0;
      text-indent: 0;
    }
  }
}

.sub-menu {
  @include transition((width $transition-speed ease-in,
    height $transition-speed ease-in,
    padding $transition-speed ease-in,
    text-indent $transition-speed ease-in));

  transition-delay:.2s;

  background-color: $brand-red;
  text-align: left;
  text-indent: -9999px;
  overflow: hidden;

  position: fixed;
  left: span(2, 12);
  top: 0;
  z-index: -1;

  height: 100%;
  width: 0;
  padding: 0;

  a {
    &:hover, &:before, &:after {
      color: $brand-gray-dark;
    }
  }
}

.main-header {
  @include transition(all $transition-speed ease-in-out);
  min-width: ms(3);

  &.menu-active {
    background-color: $brand-red;
    z-index: 100;
    width: 66%;

    .main-nav {
      position: relative;
    }

    @media (min-width: $screen-md) {
      width: $menu-width;
      max-width: 33.33%;
    }

    @media (max-width: $screen-md) {
      width: 66%;
      max-width: 66%;
    }

    a:hover {
      color: $brand-gray-dark;
    }

    #menu-main-menu {
      display: block;
    }

    .main-nav {
      .nav-toggle {
        position: absolute;
        top: rem(-160);
        right: rem(16);
        margin: 0;
        font-size: ms(2);

        &:hover {
          color: $brand-gray-dark;
        }

        &:before {
          content: 'q';
        }

        @media (max-width: $screen-sm) {
          top: -7rem;
        }

        @media (max-width: $screen-xs) {
          top: -5rem;
        }
      }
    }

    .dropdown {
      &:hover {
        .sub-menu {
          display: none;
        }
      }
    }

    .sub-menu {
      @include transition((
              height $transition-speed ease-in,
              padding-top $transition-speed ease-in,
              padding-bottom $transition-speed ease-in,
              margin $transition-speed ease-in,
              text-indent $transition-speed ease-in));

      transition-delay:.2s;

      text-align: center;

      position: relative;
      height: 0;
      left: 0;
    }

    .social-links li {
      display: inline-block;
    }
  }
}

.posts-navigation {
  display: flex;
  flex-direction: row;      // or column
  justify-content: space-between; // or start/center/end
  align-items: center;      // tweak as needed
  flex-wrap: nowrap;        // or wrap

  @include flex-direction(row);
  @include justify-content(space-between);
  @include flex-align(center);

  background-color: $brand-gray-mid;
  font-family: $font-family-header;
  text-align: center;
  text-transform: uppercase;
  font-size: ms(2);

  margin: auto;
  width: 100%;

  @media (max-width: $screen-sm) {
    @include flex-direction(column);
  }

  .nav-links {
    @include clearfix();
    width: 100%;

    .nav-previous {
      float: right;
    }
  }

  .nav-previous {
    a:after {
      content: 'h';
    }
  }

  .nav-next {
    a:before {
      content: 'i';
    }
  }

  .nav-previous,
  .nav-next {
    @include transition(all $transition-speed ease-in-out);
    width: ms(6);

    &:hover {
      background-color: $brand-red;

      a {
        color: #fff;
      }
    }
  }

  .nav-category-back {
    flex: 1 1 auto;
    min-width: 0;
    max-width: 100%;
    @include transition(all $transition-speed ease-in-out);

    a {
      display: block;
      padding: ms(1);
      font-size: ms(1);
      text-transform: uppercase;

      &:before {
        content: 'i';
        display: inline;
      }

      &:after {
        content: none;
        display: none;
      }
    }

    &:hover {
      background-color: $brand-red;

      a {
        color: #fff;
      }
    }
  }

  a {
    display: block;
    padding: ms(1);
    font-size: ms(1);

    &:before,
    &:after {
      font-family: $font-family-icons;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      line-height: 1;
      font-size: ms(1);

      position: relative;
      top: 1px;

      display: inline-block;
      vertical-align: middle;
    }
  }
}

.post-nav {
  background-color: transparent;

  @media (min-width: $screen-sm) {
    margin-right: 0;
  }

  .post-header & {
    @include inline-flex();
    width: auto;

    a {
      padding: 0;
    }

    .nav-previous,
    .nav-next {
      width: ms(4);
      font-size: 10px;

      &:hover {
        background-color: transparent;

        a {
          color: $brand-gray-dark;
        }
      }
    }

    @media (max-width: $screen-xs) {
      display: none;
    }
  }

  .nav-previous {
    a {
      &:before {
        content: 'i';
      }

      &:after {
        display: none;
      }
    }
  }

  .nav-next {
    a {
      &:after {
        content: 'h';
      }

      &:before {
        display: none;
      }
    }
  }
}

